--- a/package.json
+++ b/package.json
@@ -4,13 +4,27 @@
   "description": "Node.js Oracle Database Example",
   "main": "server.js",
   "type": "module",
+  "scripts": {
+    "start": "node server.js",
+    "test": "mocha --config test/opts/.mocharc.yaml",
+    "test:watch": "nodemon --watch test --exec \"npm test\""
+  },
   "dependencies": {
+    "chai": "^6.2.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mocha": "^11.7.4",
     "oracledb": "^6.9.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
+  },
+  "devDependencies": {
+    "proxyquire": "^2.1.3",
+    "sinon": "^21.0.0"
+  },
+  "imports": {
+    "#db/*": "./db/*"
   }
 }
